--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^18.1.0",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
