--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-burger-menu": "^3.0.6",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
